--- a/plan9/config_sh.sample
+++ b/plan9/config_sh.sample
@@ -636,6 +636,7 @@ db_prefixtype='size_t'
 db_version_major=''
 db_version_minor=''
 db_version_patch=''
+default_inc_excludes_dot=''
 direntrytype='struct dirent'
 dlext='none'
 dlsrc='dl_none.xs'
