Move Unicode-Normalize to dist/
p5p has taken over the maintenance of this module, so it should be in
dist/

--- a/META.yml
+++ b/META.yml
@@ -49,6 +49,7 @@ no_index:
     - dist/threads-shared
     - dist/Tie-File
     - dist/Time-HiRes
+    - dist/Unicode-Normalize
     - dist/XSLoader
     - lib/perl5db
     - win32
