correct PREMSVC80 typo
(cherry picked from commit b5749b6710c39eba669f84c841b0999029955dfa)

--- a/win32/GNUmakefile
+++ b/win32/GNUmakefile
@@ -700,7 +700,7 @@ endif
 # Perl itself with e.g. VC6 but later installs an XS module using VC8
 # the time_t types will still be compatible.
 ifeq ($(WIN64),undef)
-ifeq ((PREMSVC80),define)
+ifeq ($(PREMSVC80),define)
 BUILDOPT	+= -D_USE_32BIT_TIME_T
 endif
 endif
