Remove unnecessary MSVC*FREE CCTYPEs from Windows makefiles
As was pointed out recently in perl #131487, there is little point in most
of these since the Express (now Community) versions are so close to the
full versions anyway these days. MSVC70FREE is retained since it was the
only one that was actually being made use of.

--- a/win32/GNUmakefile
+++ b/win32/GNUmakefile
@@ -159,31 +159,19 @@ DEFAULT_INC_EXCLUDES_DOT := define
 #CCTYPE		:= MSVC70FREE
 # Windows Server 2003 SP1 Platform SDK (April 2005)
 #CCTYPE		:= SDK2003SP1
-# Visual C++ 2005 (aka Visual C++ 8.0) (full version)
+# Visual C++ 2005 (aka Visual C++ 8.0) (full version or Express Edition)
 #CCTYPE		:= MSVC80
-# Visual C++ 2005 Express Edition (aka Visual C++ 8.0) (free version)
-#CCTYPE		:= MSVC80FREE
-# Visual C++ 2008 (aka Visual C++ 9.0) (full version)
+# Visual C++ 2008 (aka Visual C++ 9.0) (full version or Express Edition)
 #CCTYPE		:= MSVC90
-# Visual C++ 2008 Express Edition (aka Visual C++ 9.0) (free version)
-#CCTYPE		:= MSVC90FREE
-# Visual C++ 2010 (aka Visual C++ 10.0) (full version)
+# Visual C++ 2010 (aka Visual C++ 10.0) (full version or Express Edition)
 #CCTYPE		:= MSVC100
-# Visual C++ 2010 Express Edition (aka Visual C++ 10.0) (free version)
-#CCTYPE		:= MSVC100FREE
-# Visual C++ 2012 (aka Visual C++ 11.0) (full version)
+# Visual C++ 2012 (aka Visual C++ 11.0) (full version or Express Edition)
 #CCTYPE		:= MSVC110
-# Visual C++ 2012 Express Edition (aka Visual C++ 11.0) (free version)
-#CCTYPE		:= MSVC110FREE
-# Visual C++ 2013 (aka Visual C++ 12.0) (full version)
+# Visual C++ 2013 (aka Visual C++ 12.0) (full version or Express Edition)
 #CCTYPE		:= MSVC120
-# Visual C++ 2013 Express Edition (aka Visual C++ 12.0) (free version)
-#CCTYPE		:= MSVC120FREE
-# Visual C++ 2015 (aka Visual C++ 14.0) (full version)
+# Visual C++ 2015 (aka Visual C++ 14.0) (full version or Express Edition)
 #CCTYPE		:= MSVC140
-# Visual C++ 2015 Express Edition (aka Visual C++ 14.0) (free version)
-#CCTYPE		:= MSVC140FREE
-# Visual C++ 2017 (aka Visual C++ 14.1) (all versions)
+# Visual C++ 2017 (aka Visual C++ 14.1) (full version or Community Edition)
 #CCTYPE		:= MSVC141
 # MinGW or mingw-w64 with gcc-3.4.5 or later
 #CCTYPE		:= GCC
@@ -655,8 +643,6 @@ CXX_FLAG	= -TP -EHsc
 
 ifeq ($(CCTYPE),MSVC140)
 LIBC		= ucrt.lib
-else ifeq ($(CCTYPE),MSVC140FREE)
-LIBC		= ucrt.lib
 else ifeq ($(CCTYPE),MSVC141)
 LIBC		= ucrt.lib
 else
@@ -671,8 +657,6 @@ OPTIMIZE	= -Od -MD -Zi
 LINK_DBG	= -debug
 else ifeq ($(CFG),DebugFull)
 ifeq ($(CCTYPE),MSVC140)
-LIBC		= ucrtd.lib
-else ifeq ($(CCTYPE),MSVC140FREE)
 LIBC		= ucrtd.lib
 else ifeq ($(CCTYPE),MSVC141)
 LIBC		= ucrtd.lib
@@ -711,10 +695,8 @@ ifeq ($(PREMSVC80),undef)
 DEFINES		+= -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE
 endif
 
-# Likewise for deprecated Winsock APIs in VC++ 14.0 for now.
+# Likewise for deprecated Winsock APIs in VC++ 14.0 onwards for now.
 ifeq ($(CCTYPE),MSVC140)
-DEFINES		+= -D_WINSOCK_DEPRECATED_NO_WARNINGS
-else ifeq ($(CCTYPE),MSVC140FREE)
 DEFINES		+= -D_WINSOCK_DEPRECATED_NO_WARNINGS
 else ifeq ($(CCTYPE),MSVC141)
 DEFINES		+= -D_WINSOCK_DEPRECATED_NO_WARNINGS
@@ -740,12 +722,6 @@ LIBBASEFILES	= oldnames.lib kernel32.lib user32.lib gdi32.lib winspool.lib \
 	odbc32.lib odbccp32.lib comctl32.lib
 
 ifeq ($(CCTYPE),MSVC140)
-ifeq ($(CFG),DebugFull)
-LIBBASEFILES	+= msvcrtd.lib vcruntimed.lib
-else
-LIBBASEFILES	+= msvcrt.lib vcruntime.lib
-endif
-else ifeq ($(CCTYPE),MSVC140FREE)
 ifeq ($(CFG),DebugFull)
 LIBBASEFILES	+= msvcrtd.lib vcruntimed.lib
 else
@@ -820,21 +796,7 @@ else
 LINK_FLAGS	+= -subsystem:console,"5.01"
 endif
 
-else ifeq ($(CCTYPE),MSVC120FREE)
-ifeq ($(WIN64),define)
-LINK_FLAGS	+= -subsystem:console,"5.02"
-else
-LINK_FLAGS	+= -subsystem:console,"5.01"
-endif
-
 else ifeq ($(CCTYPE),MSVC140)
-ifeq ($(WIN64),define)
-LINK_FLAGS	+= -subsystem:console,"5.02"
-else
-LINK_FLAGS	+= -subsystem:console,"5.01"
-endif
-
-else ifeq ($(CCTYPE),MSVC140FREE)
 ifeq ($(WIN64),define)
 LINK_FLAGS	+= -subsystem:console,"5.02"
 else
@@ -1322,16 +1284,6 @@ $(MINIDIR)\.exists : $(CFGH_TMPL)
 	echo #undef NVgf&& \
 	echo #undef USE_LONG_DOUBLE)>> config.h
 ifeq ($(CCTYPE),MSVC140)
-	@(echo #undef FILE_ptr&& \
-	echo #undef FILE_cnt&& \
-	echo #undef FILE_base&& \
-	echo #undef FILE_bufsiz&& \
-	echo #define FILE_ptr^(fp^) PERLIO_FILE_ptr^(fp^)&& \
-	echo #define FILE_cnt^(fp^) PERLIO_FILE_cnt^(fp^)&& \
-	echo #define FILE_base^(fp^) PERLIO_FILE_base^(fp^)&& \
-	echo #define FILE_bufsiz^(fp^) ^(PERLIO_FILE_cnt^(fp^) + PERLIO_FILE_ptr^(fp^) - PERLIO_FILE_base^(fp^)^)&& \
-	echo #define I_STDBOOL)>> config.h
-else ifeq ($(CCTYPE),MSVC140FREE)
 	@(echo #undef FILE_ptr&& \
 	echo #undef FILE_cnt&& \
 	echo #undef FILE_base&& \
