--- a/plan9/config_sh.sample
+++ b/plan9/config_sh.sample
@@ -380,6 +380,7 @@ d_memcmp='define'
 d_memcpy='define'
 d_memmem='undef'
 d_memmove='define'
+d_memrchr='undef'
 d_memset='define'
 d_mkdir='define'
 d_mkdtemp='undef'
