Configure changes for strtod_l() probe

--- a/plan9/config_sh.sample
+++ b/plan9/config_sh.sample
@@ -564,6 +564,7 @@ d_strlcat='undef'
 d_strlcpy='undef'
 d_strnlen='undef'
 d_strtod='define'
+d_strtod_l='undef'
 d_strtol='define'
 d_strtold='undef'
 d_strtold_l='undef'
