--- a/win32/GNUmakefile
+++ b/win32/GNUmakefile
@@ -1752,7 +1752,7 @@ distclean: realclean
 	-del /f "bin\*.bat"
 	-del /f perllibst.h
 	-del /f $(PERLEXE_RES) perl.base
-	-cd .. && del /s *$(a) *.map *.pdb *.ilk *.bs *$(o) .exists pm_to_blib ppport.h
+	-cd .. && del /s *$(a) *.map *.pdb *.ilk *$(o) .exists pm_to_blib ppport.h
 	-cd $(EXTDIR) && del /s *.def Makefile Makefile.old
 	-cd $(DISTDIR) && del /s *.def Makefile Makefile.old
 	-cd $(CPANDIR) && del /s *.def Makefile Makefile.old
