Simplify travis.yml config for Continuous Integration
The goal is to have a quick smoke on travis smokers
to plug in short future CI for any new commits/PR.

NPD

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,21 @@ compiler:
   - clang
 
 env:
-    - CONFIGURE_ARGS='-Uusethreads'
-    - CONFIGURE_ARGS='-Dusethreads'
-    - CONFIGURE_ARGS='-Duselongdouble'
-    - CONFIGURE_ARGS='-Duse64bitall'
-    - CONFIGURE_ARGS='-Dusethreads -Duselongdouble'
-    - CONFIGURE_ARGS='-Dusethreads -Duse64bitall'
-    - CONFIGURE_ARGS='-Dusethreads -Duse64bitall -Duselongdouble'
+    global:
+        - PERL_BUILD_PACKAGING=1
+    matrix:
+        - CONFIGURE_ARGS='-Uusethreads'
+        - CONFIGURE_ARGS='-Dusethreads'
+
+matrix:
+  exclude:
+  - compiler: clang
+    os: linux
+  - compiler: gcc
+    os: osx
 
 script:
-  - ./Configure -des -Dusedevel -Uversiononly -Dcc=$CC $CONFIGURE_ARGS -Dprefix=$HOME/perl-blead -DDEBUGGING && TEST_JOBS=4 make -j4 test_harness && make install && $HOME/perl-blead/bin/perlivp
+  - ./Configure -des -Dusedevel -Uversiononly -Dcc=$CC $CONFIGURE_ARGS -Dprefix=$HOME/perl-blead -DDEBUGGING && TEST_JOBS=8 make -j8 test_harness_notty && make -j8 install && $HOME/perl-blead/bin/perlivp
 
 addons:
     apt:
