Fix $Config{libpth} for x64 builds with VC++ earlier than 14.1 (VS2017)
This commit adapts and extends a patch from Marc-Philip
<marc-philip@die-werners.de> on perl #132484.

--- a/win32/GNUmakefile
+++ b/win32/GNUmakefile
@@ -474,6 +474,10 @@ ifneq ($(GCCCROSS),)
 CCINCDIR := $(CCHOME)\$(GCCCROSS)\include
 CCLIBDIR := $(CCHOME)\$(GCCCROSS)\lib
 ARCHPREFIX := $(GCCCROSS)-
+else ifeq ($(CCTYPE),GCC)
+CCINCDIR := $(CCHOME)\include
+CCLIBDIR := $(CCHOME)\lib
+ARCHPREFIX :=
 else
 CCINCDIR := $(CCHOME)\include
 ifeq ($(CCTYPE),MSVC141)
@@ -483,7 +487,11 @@ else
 CCLIBDIR := $(CCHOME)\lib\x86
 endif
 else
+ifeq ($(WIN64),define)
+CCLIBDIR := $(CCHOME)\lib\amd64
+else
 CCLIBDIR := $(CCHOME)\lib
+endif
 endif
 ARCHPREFIX :=
 endif
