configure probes for accept4(), dup3(), pipe2()
These will shortly be used to implement I/O operations that create file
descriptors with the FD_CLOEXEC flag set atomically.

--- a/plan9/config_sh.sample
+++ b/plan9/config_sh.sample
@@ -103,6 +103,7 @@ d_PRIu64='define'
 d_PRIx64='define'
 d_SCNfldbl='define'
 d__fwalk='undef'
+d_accept4='undef'
 d_access='define'
 d_accessx='undef'
 d_acosh='undef'
@@ -178,6 +179,7 @@ d_double_style_vax='undef'
 d_drand48_r='undef'
 d_drand48proto='undef'
 d_dup2='define'
+d_dup3='undef'
 d_eaccess='undef'
 d_endgrent='define'
 d_endgrent_r='undef'
@@ -425,6 +427,7 @@ d_pathconf='define'
 d_pause='define'
 d_perl_otherlibdirs='undef'
 d_phostname='undef'
+d_pipe2='undef'
 d_pipe='define'
 d_poll='undef'
 d_portable='define'
