--- a/plan9/config_sh.sample
+++ b/plan9/config_sh.sample
@@ -383,6 +383,7 @@ d_memrchr='undef'
 d_mkdir='define'
 d_mkdtemp='undef'
 d_mkfifo='define'
+d_mkostemp='undef'
 d_mkstemp='undef'
 d_mkstemps='undef'
 d_mktime64='undef'
