--- a/win32/Makefile
+++ b/win32/Makefile
@@ -1225,13 +1225,12 @@ Extensions_clean:
 Extensions_realclean: 
 	-if exist $(MINIPERL) $(MINIPERL) -I..\lib ..\make_ext.pl "MAKE=$(MAKE)" --dir=$(CPANDIR) --dir=$(DISTDIR) --dir=$(EXTDIR) --all --target=realclean
 
-PostExt: rebuild_storable
+PostExt: ..\lib\Storable\Limit.pm
 
-rebuild_storable: $(PERLEXE)
+..\lib\Storable\Limit.pm: $(PERLEXE) Extensions
 	$(PERLEXE) -I..\lib -I. ..\dist\Storable\stacksize --core
-	cd ..\dist\Storable
-	$(MAKE) PERL_CORE=1
-	cd ..\..\win32
+	if not exist ..\lib\Storable mkdir ..\lib\Storable
+	copy ..\dist\Storable\lib\Storable\Limit.pm ..\lib\Storable\Limit.pm
 
 #-------------------------------------------------------------------------------
 
@@ -1311,6 +1310,7 @@ distclean: realclean
 	-del /f $(LIBDIR)\Time\HiRes.pm
 	-del /f $(LIBDIR)\Unicode\Normalize.pm
 	-del /f $(LIBDIR)\Math\BigInt\FastCalc.pm
+	-del /f $(LIBDIR)\Storable.pm $(LIBDIR)\Storable\Limit.pm
 	-del /f $(LIBDIR)\Win32.pm
 	-del /f $(LIBDIR)\Win32CORE.pm
 	-del /f $(LIBDIR)\Win32API\File.pm
