--- a/plan9/config_sh.sample
+++ b/plan9/config_sh.sample
@@ -625,6 +625,7 @@ d_voidtty=''
 d_vsnprintf='undef'
 d_wait4='undef'
 d_waitpid='define'
+d_wcrtomb='undef'
 d_wcscmp='undef'
 d_wcstombs='define'
 d_wcsxfrm='undef'
