--- a/.github/workflows/smoke-information.yml
+++ b/.github/workflows/smoke-information.yml
@@ -24,5 +24,6 @@ jobs:
         run: |
             if [ -n "${GITHUB_HEAD_REF}" ]; then
                 echo "Pull request"
-                git log --pretty=format:"Author: %an <%ae>" ${GITHUB_BASE_REF}..${GITHUB_HEAD_REF}
+                branch_off=$(git merge-base ${GITHUB_BASE_REF} ${GITHUB_HEAD_REF})
+                git log --pretty=format:"Author: %an <%ae>" $branch_off..${GITHUB_SHA}
             fi
