--- a/.github/workflows/smoke-information.yml
+++ b/.github/workflows/smoke-information.yml
@@ -23,6 +23,12 @@ jobs:
       - name: Involved authors
         run: |
             if [ -n "${GITHUB_HEAD_REF}" ]; then
-                echo "Pull request"
-                git log --pretty=format:"Author: %an <%ae>" ${GITHUB_BASE_REF}..${GITHUB_HEAD_REF}
+                echo "Pull request authors"
+                # env
+                # Create the names of the branches here, as they don't seem
+                # to exist properly?!
+                git switch -c $GITHUB_HEAD_REF
+                echo git merge-base origin/${GITHUB_BASE_REF} ${GITHUB_HEAD_REF}
+                branch_off=$(git merge-base origin/${GITHUB_BASE_REF} ${GITHUB_HEAD_REF})
+                git log --pretty=format:"Author: %an <%ae>" $branch_off..${GITHUB_SHA}^2
             fi
