--- a/.github/workflows/smoke-information.yml
+++ b/.github/workflows/smoke-information.yml
@@ -30,5 +30,5 @@ jobs:
                 git switch -c $GITHUB_HEAD_REF
                 echo git merge-base origin/${GITHUB_BASE_REF} ${GITHUB_HEAD_REF}
                 branch_off=$(git merge-base origin/${GITHUB_BASE_REF} ${GITHUB_HEAD_REF})
-                git log --pretty=format:"Author: %an <%ae>" $branch_off..HEAD^1
+                git log --pretty=format:"Author: %an <%ae>" $branch_off..${GITHUB_SHA}^2
             fi
